# workspace/backend/src/mapkeeper/models/__init__.py
@@ -4,6 +4,7 @@ from mapkeeper.models.enums import (
     ApiErrorCode,
     ApiResponseStatus,
     ContentGenerationStatus,
+    ContentPurpose,
     Platform,
     PlatformErrorCode,
     PlatformSyncTaskStatus,
@@ -21,6 +22,7 @@ __all__ = [
     "Base",
     "ContentGeneration",
     "ContentGenerationStatus",
+    "ContentPurpose",
     "LocalSEOContent",
     "Platform",
     "PlatformErrorCode",
